fix: onchange handler for dont show message

--- a/src/webview/welcome.html
+++ b/src/webview/welcome.html
@@ -572,7 +572,7 @@
             <p class="subtitle">Intelligent Kubernetes Management for Developers</p>
             <p class="tagline">Part of the Kube9 ecosystem of tools</p>
             <label>
-                <input type="checkbox" id="doNotShowAgain" aria-label="Don't show this welcome screen again" />
+                <input type="checkbox" id="doNotShowAgain" aria-label="Don't show this welcome screen again" onchange="dismiss()" />
                 <span>Don't show this welcome screen again</span>
             </label>
         </div>
