fix: complete updates for namespace management commands and error handling
- Updated function signatures for setNamespace and clearNamespace to include optional contextName parameter.
- Enhanced setActiveNamespaceCommand and clearActiveNamespaceCommand to extract and pass context information.
- Implemented error handling for context not found scenarios in kubectl commands.
- Updated webview integration to pass context information.
- Added tests for new functionality and error handling scenarios.

All changes ensure backward compatibility and improve user experience with context-aware namespace management.

--- a/src/webview/namespace.html
+++ b/src/webview/namespace.html
@@ -474,6 +474,7 @@
     <script>
         // Pass initial state from server-side template to client-side JavaScript
         window.initialIsAllNamespaces = {{IS_ALL_NAMESPACES}};
+        window.initialContextName = {{CONTEXT_NAME_JS}};
     </script>
     <script src="{{SCRIPT_URI}}"></script>
 </body>
