feat: update welcome screen and branding
- Update ecosystem panels to show kube9-operator, kube9-vscode, and
  kube9-desktop (removed kube9-ui)
- Remove AI Features section as VS Code extension will not include AI
- Add Cluster Organizer instructions section explaining how to access
  and use the feature
- Update README.md to consistently reference 'Kube9 VS Code' instead
  of generic 'Kube9'
- Add kube9-desktop to Related Projects section
- Sync AI folder documentation (features and specs) with implementation

--- a/src/webview/welcome.html
+++ b/src/webview/welcome.html
@@ -588,14 +588,14 @@
                     <a href="https://github.com/alto9/kube9-operator" onclick="openExternal('https://github.com/alto9/kube9-operator'); return false;">View on GitHub →</a>
                 </div>
                 <div class="ecosystem-card">
-                    <h3>Kube9 UI</h3>
-                    <p>Web-based dashboard for visualizing and managing Kubernetes resources.</p>
-                    <a href="https://github.com/alto9/kube9-ui" onclick="openExternal('https://github.com/alto9/kube9-ui'); return false;">View on GitHub →</a>
-                </div>
-                <div class="ecosystem-card">
                     <h3>Kube9 VS Code</h3>
                     <p>VS Code extension for Kubernetes cluster management (this extension).</p>
                     <a href="https://github.com/alto9/kube9-vscode" onclick="openExternal('https://github.com/alto9/kube9-vscode'); return false;">View on GitHub →</a>
+                </div>
+                <div class="ecosystem-card">
+                    <h3>Kube9 Desktop</h3>
+                    <p>Desktop application for Kubernetes management with integrated development tools.</p>
+                    <a href="https://github.com/alto9/kube9-desktop" onclick="openExternal('https://github.com/alto9/kube9-desktop'); return false;">View on GitHub →</a>
                 </div>
             </div>
 
@@ -614,24 +614,20 @@
         </div>
 
         <div class="section">
-            <h2><span class="section-icon">🤖</span> Coming Soon: AI-Powered Features</h2>
-            <p>AI capabilities are not available yet. We are building operator-backed insights and recommendations; they will roll out in a future release.</p>
+            <h2><span class="section-icon">📁</span> Organize Your Clusters</h2>
+            <p>Use the Cluster Organizer to customize how your clusters appear in the tree view:</p>
             
             <ul class="feature-list">
-                <li><strong>Planned:</strong> Performance optimization suggestions</li>
-                <li><strong>Planned:</strong> Cost reduction opportunities</li>
-                <li><strong>Planned:</strong> Security insights and proactive alerts</li>
-                <li><strong>Planned:</strong> Reliability improvements and stability guidance</li>
+                <li><strong>Create folders</strong> to group related clusters together</li>
+                <li><strong>Set aliases</strong> to display friendly names instead of long context names</li>
+                <li><strong>Hide clusters</strong> to reduce clutter in your tree view</li>
             </ul>
 
-            <div class="info-notice">
-                <strong>Status:</strong> Operator-powered AI features are under development and not enabled in this version.
-            </div>
-
-            <div class="actions">
-                <button class="link-button secondary" onclick="openDocs()">View Documentation</button>
+            <div class="success-notice">
+                <strong>How to access:</strong> Open the Command Palette (<span class="code">Cmd+Shift+P</span> or <span class="code">Ctrl+Shift+P</span>) and search for <strong>"Kube9: Cluster Organizer"</strong>
             </div>
         </div>
+
     </div>
 
     <script>
